@@ -18,6 +18,7 @@ Version 1.01.0
 - 1.00.0 regression: Compiler crash after showing an error when defining a non-array EXTERN using an array declaration
 - 1.00.0 regression: lhsint &= rhsint self-assignments, where the lhsint expression included a function call, didn't result in a "type mismatch" error anymore, even though the string result of the & concatenation operation couldn't be assigned back to the lhsint.
 - Self-assignments will now be parsed correctly when the lhs is a call to a function with byref result and one argument, for example: f(0) += 1
+- Partial fix for unsafe FB runtime signal handling code: Potential dead lock in Unix rtlib avoided.
 
 
 Version 1.00.0 (former 0.91.0):
